# himat

./: .gitignore  MILESTONES.md  README.md  RUNBOOK_4090.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: __init__.py  download_matsynth.py  enrich_prompts.py  gallery.py  preprocess.py  sample.py  train_dc_ae.py  train_himat.py
src/himat/: __init__.py  config.py
src/himat/data/: __init__.py  dataset.py  matsynth.py  preproc.py  prompts.py  smoke.py
src/himat/eval/: __init__.py  clipscore.py  dc_ae_recon.py
src/himat/inference/: __init__.py  pipeline.py
src/himat/models/: __init__.py  crossstitch.py  dc_ae.py  dit.py  himat.py  text_encoder.py
src/himat/train/: __init__.py  flow_matching.py  himat_finetune.py  losses.py  vae_finetune.py
tests/: test_augment.py  test_crossstitch.py  test_dc_ae_wrapper.py  test_dit_himat.py  test_flow_matching.py  test_packing.py  test_pipeline_sampler.py  test_preproc.py  test_prompts.py
